force-app/main/default/objects/Breed__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Denotes whether this record is active - used in automation</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>