force-app/main/default/objects/Breed__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>The animals category</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amphibian</fullName>
            </value>
            <value>
                <fullName>Bird</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
            <value>
                <fullName>Invertebrate</fullName>
            </value>
            <value>
                <fullName>Mammal</fullName>
            </value>
            <value>
                <fullName>Reptile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>