force-app/main/default/objects/Breed__c/fields/Crossbreed__c.field-meta.xml
<CustomField>
    <fullName>Crossbreed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the breed is a crossbreed</inlineHelpText>
    <label>Crossbreed</label>
    <type>Checkbox</type>
</CustomField>