force-app/main/default/objects/Breed__c/fields/Ideal_Maximum_Weight_kgs__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Maximum_Weight_kgs__c</fullName>
    <description>The ideal maximum weight in kgs for the Breed</description>
    <label>Ideal Maximum Weight (kgs)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>