force-app/main/default/objects/Breed__c/fields/Ideal_Minimum_Weight_kgs__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Minimum_Weight_kgs__c</fullName>
    <description>The ideal minimum weight for the Breed</description>
    <label>Ideal Minimum Weight (kgs)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>