force-app/main/default/objects/Breed__c/fields/Latin_Name__c.field-meta.xml
<CustomField>
    <fullName>Latin_Name__c</fullName>
    <label>Latin Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>