force-app/main/default/objects/Breed__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <inlineHelpText>The animals species</inlineHelpText>
    <label>Species</label>
    <length>255</length>
    <type>Text</type>
</CustomField>