force-app/main/default/objects/Breed__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Exotic</fullName>
            </value>
            <value>
                <fullName>Feral</fullName>
            </value>
            <value>
                <fullName>Wild</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>