force-app/main/default/objects/Breed__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Type__c</columns>
    <columns>Species__c</columns>
    <columns>Crossbreed__c</columns>
    <columns>Latin_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>